--- a/mysite/HelpOut/templates/HelpOut/request.html
+++ b/mysite/HelpOut/templates/HelpOut/request.html
@@ -10,38 +10,43 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Polls App</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <a class="navbar-brand" href="#"><i class="fas fa-hands-helping"></i>HelpOut</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">Questions</a>
-          <a class="nav-item nav-link" color="white" href="#">Comments</a>
-        </div>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="http://127.0.0.1:8000/HelpOut">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://127.0.0.1:8000/HelpOut/postedRequests/">Give Help!</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://127.0.0.1:8000/HelpOut/gethelp/">Get Help!</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">My Profile</a>
+          </li>
+        </ul>
       </div>
     </nav>
 
 
 
-    <h3 style="text-align:center">Welcome to the comments page!</h3>
+    <h3 style="text-align:center">Type below to get help!</h3>
     <form action="list/" method="post">
       <div class="d-flex justify-content-center">
       <div class="form-group">
         {% csrf_token %}
         {{ form }}
-        <small class="form-text text-muted">We'll publish it though so be kind!</small>
+        <small class="form-text text-muted">Thank whoever helps you!</small>
         <input type="submit" class="btn btn-primary" value="Submit">
         </div>
         </div>
     </form>
-    <footer class="footer">
-          <div class="container">
-            <span class="text-muted">Copyright 2020 Ali Ibrahim Developments.</span>
-          </div>
-    </footer>
+
 
   </body>
 </html>
