--- a/HelpOut/templates/HelpOut/requestslist.html
+++ b/HelpOut/templates/HelpOut/requestslist.html
@@ -16,13 +16,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="http://127.0.0.1:8000/HelpOut">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/HelpOut">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://127.0.0.1:8000/HelpOut/postedRequests/">Give Help!</a>
+            <a class="nav-link" href="/HelpOut/postedRequests">Give Help!</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://127.0.0.1:8000/HelpOut/gethelp/">Get Help!</a>
+            <a class="nav-link" href="/HelpOut/gethelp">Get Help!</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">My Profile</a>
